--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     testCompile 'junit:junit:4.12'*/
     compile 'com.github.bumptech.glide:glide:4.3.1'
     compile 'com.google.android.gms:play-services-auth:15.0.1'
+    compile 'com.google.firebase:firebase-core:9.6.1'
+    compile 'com.google.firebase:firebase-auth:9.6.1'
+
 
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
 }
