--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
         minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
-        versionName "1.0"
+        versionName "1.6"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
 
@@ -24,10 +24,12 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    implementation 'com.android.support:support-annotations:27.1.1'
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    //noinspection GradleCompatible
     implementation 'com.google.firebase:firebase-auth:16.0.3'
-    implementation 'com.google.firebase:firebase-database:11.6.2'
+    implementation 'com.google.firebase:firebase-database:16.0.2'
     implementation 'com.android.support:design:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -39,12 +41,13 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:26.1.0'
     testCompile 'junit:junit:4.12'*/
-    compile 'com.github.bumptech.glide:glide:4.3.1'
-    compile 'com.google.android.gms:play-services-auth:15.0.1'
-    compile 'com.google.firebase:firebase-core:9.6.1'
-    compile 'com.google.firebase:firebase-auth:9.6.1'
-    compile 'com.google.firebase:firebase-core:16.0.0'
-    compile 'com.google.firebase:firebase-database:16.0.1'
+    api 'com.github.bumptech.glide:glide:4.3.1'
+    api 'com.google.android.gms:play-services-auth:16.0.0'
+    api 'com.google.firebase:firebase-core:16.0.3'
+    api 'com.google.firebase:firebase-auth:16.0.3'
+    api 'com.google.firebase:firebase-core:16.0.3'
+    api 'com.google.firebase:firebase-database:16.0.2'
+
 
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
 }
