--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity" />
-        <activity
-            android:name=".LoginActivity">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -60,7 +59,8 @@
         </activity>
         <activity
             android:name=".UsunActivity"
-            android:label="Usuń"></activity>
+            android:label="Usuń" />
+        <activity android:name=".DodajAdminActivity"></activity>
     </application>
 
 </manifest>
