--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,13 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="Lublin Tour"
+        android:label="Lublin TOUR"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity" />
-        <activity android:name=".LoginActivity">
+        <activity android:name=".LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,7 +30,7 @@
         </activity>
         <activity
             android:name=".NavigationActivity"
-            android:label="Nawigacja"
+            android:label="NAWIGACJA"
             android:theme="@style/AppTheme.NoActionBar" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -48,19 +49,19 @@
             android:label="@string/title_activity_maps" />
         <activity
             android:name=".DodawanieActivity"
-            android:label="Dodaj">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <action android:name="android.intent.action.EDIT" />
-                <action android:name="android.intent.action.PICK" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
+            android:label="DODAJ LOKALIZACJĘ"
+            android:parentActivityName=".NavigationActivity">
         </activity>
         <activity
             android:name=".UsunActivity"
-            android:label="Usuń" />
-        <activity android:name=".DodajAdminActivity"></activity>
+            android:label="USUŃ lOKALIZACJĘ"
+            android:parentActivityName=".NavigationActivity"
+            />
+        <activity
+            android:name=".DodajAdminActivity"
+            android:label="ADMINISTRZTORZY"
+            android:parentActivityName=".NavigationActivity"
+            />
     </application>
 
 </manifest>
